# ClauseKeeper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD_SPEC.md  CONTRIBUTING.md  Dockerfile  README.md  create_pr.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: good_first_issue.md
.github/instructions/: clause-rules.instructions.md
app/: __init__.py  analytics.py  auth.py  clause_rules.py  generator.py  main.py  scanner.py  store.py
brand/: BRAND.md
content/drafts/: 2026-06-17-is-my-privacy-policy-2026-compliant.md  2026-06-17-privacy-policy-ai-disclosure-examples.md  README.md
docs/: LAUNCH_KIT.md  LAUNCH_POSTS.md  RESUME_TOMORROW.md  SEED_ISSUES.md  SELF_HOSTING.md
docs/pending/: test.yml.txt
mcp/: PUBLISHING.md  README.md  pyproject.toml  server.json  server.py
mcp/clausekeeper_core/: __init__.py  clause_rules.py  scanner.py
mcp/clausekeeper_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: generate_seo_draft.py
static/: style.css
templates/: about.html  badge.html  badge_minted.html  base.html  doc.html  generate.html  hosted.html  landing.html  login.html  pricing.html  scan.html  stats.html
tests/: conftest.py  test_analytics.py  test_auth_flow.py  test_badge.py  test_scanner.py  test_seo_draft_generator.py  test_subscribe_pricing.py  test_webhook.py
